apps/torrserver/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-torrserver-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /torrserver
