apps/torrserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torrserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torrserver
  template:
    metadata:
      labels:
        app: torrserver
    spec:
      containers:
        - name: torrserver
          image: ghcr.io/yourok/torrserver:latest
          ports:
            - containerPort: 8090
