apps/torrserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrserver
spec:
  selector:
    app: torrserver
  ports:
    - port: 80
      targetPort: 8090
